--- a/config/scaffolding/TestImportGitScenariosProject.yml
+++ b/config/scaffolding/TestImportGitScenariosProject.yml
@@ -7,3 +7,8 @@ packages:
   gitUrl: https://github.com/Mohamed-Naufal-A-IBM
   gitUsername: Mohamed-Naufal-A-IBM
   gitBranch: main
+services:
+- serviceName: project.testimportgitscenarios.integrations:test
+  packages:
+  - name: TestImportGitScenariosProject
+    version: "1.0"
