--- a/config/scaffolding/TestImportGitScenariosProject.yml
+++ b/config/scaffolding/TestImportGitScenariosProject.yml
@@ -12,3 +12,7 @@ services:
   packages:
   - name: TestImportGitScenariosProject
     version: "1.0"
+- serviceName: pub.date:getCurrentDate
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2064
