--- a/config/scaffolding/TestImportGitScenariosProject.yml
+++ b/config/scaffolding/TestImportGitScenariosProject.yml
@@ -7,3 +7,32 @@ packages:
   gitUrl: https://github.com/Mohamed-Naufal-A-IBM
   gitUsername: Mohamed-Naufal-A-IBM
   gitBranch: main
+services:
+- serviceName: project.testimportgitscenarios.documenttypes:test
+  packages:
+  - name: TestImportGitScenariosProject
+    version: "1.0"
+- serviceName: project.testimportgitscenarios.integrations:testDummyFlow
+  packages:
+  - name: TestImportGitScenariosProject
+    version: "1.0"
+- serviceName: pub.date:getCurrentDate
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2064
+- serviceName: project.testimportgitscenarios.integrations:testFlowService_12
+  packages:
+  - name: TestImportGitScenariosProject
+    version: "1.0"
+- serviceName: pub.json:documentToJSONString
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2064
+- serviceName: project.testimportgitscenarios.referencedata:test
+  packages:
+  - name: TestImportGitScenariosProject
+    version: "1.0"
+- serviceName: project.testimportgitscenarios.integrations:testFlowService_123
+  packages:
+  - name: TestImportGitScenariosProject
+    version: "1.0"
