--- a/config/scaffolding/TestImportGitScenariosProject.yml
+++ b/config/scaffolding/TestImportGitScenariosProject.yml
@@ -12,7 +12,7 @@ services:
   packages:
   - name: TestImportGitScenariosProject
     version: "1.0"
-- serviceName: project.testimportgitscenarios.integrations:testDummyFlow
+- serviceName: project.testimportgitscenarios.integrations:test
   packages:
   - name: TestImportGitScenariosProject
     version: "1.0"
@@ -20,6 +20,10 @@ services:
   packages:
   - name: WmPublic
     version: 11.1.0.0.2064
+- serviceName: project.testimportgitscenarios.integrations:testDummyFlow
+  packages:
+  - name: TestImportGitScenariosProject
+    version: "1.0"
 - serviceName: project.testimportgitscenarios.integrations:testFlowService_12
   packages:
   - name: TestImportGitScenariosProject
