--- a/config/scaffolding/TestImportGitScenariosProject.yml
+++ b/config/scaffolding/TestImportGitScenariosProject.yml
@@ -8,10 +8,6 @@ packages:
   gitUsername: Mohamed-Naufal-A-IBM
   gitBranch: main
 services:
-- serviceName: project.testimportgitscenarios.documenttypes:test
-  packages:
-  - name: TestImportGitScenariosProject
-    version: "1.0"
 - serviceName: project.testimportgitscenarios.integrations:test
   packages:
   - name: TestImportGitScenariosProject
@@ -20,7 +16,7 @@ services:
   packages:
   - name: WmPublic
     version: 11.1.0.0.2064
-- serviceName: project.testimportgitscenarios.integrations:testDummyFlow
+- serviceName: project.testimportgitscenarios.integrations:test12
   packages:
   - name: TestImportGitScenariosProject
     version: "1.0"
@@ -37,6 +33,10 @@ services:
   - name: TestImportGitScenariosProject
     version: "1.0"
 - serviceName: project.testimportgitscenarios.integrations:testFlowService_123
+  packages:
+  - name: TestImportGitScenariosProject
+    version: "1.0"
+- serviceName: project.testimportgitscenarios.integrations:testDummyFlow
   packages:
   - name: TestImportGitScenariosProject
     version: "1.0"
